--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ header h1 a {
 .visual {
   width: 100%;
   height: 500px;
-  background-image: url(images/header.png);
+  background-image: url(ihttps://github.com/kkk364/site03/blob/main/images/header.png?raw=true);
   background-position: center;
   background-size: cover;
 }
