--- a/css/style.css
+++ b/css/style.css
@@ -64,7 +64,7 @@ header h1 a {
 .visual {
   width: 100%;
   height: 500px;
-  background-image: url(/images/top.png);
+  background-image: url(../images/top.png);
   background-position: center;
   background-size: cover;
 }
@@ -73,7 +73,7 @@ header h1 a {
 .visual_news {
   width: 100%;
   height: 300px;
-  background-image: url(/images/news.png);
+  background-image: url(../images/news.png);
   background-position: center;
   background-size: cover;
 }
@@ -83,7 +83,7 @@ header h1 a {
 .visual_works {
   width: 100%;
   height: 300px;
-  background-image: url(/images/works.png);
+  background-image: url(../images/works.png);
   background-position: center;
   background-size: cover;
 }
@@ -92,7 +92,7 @@ header h1 a {
 .visual_access {
   width: 100%;
   height: 300px;
-  background-image: url(/images/access.png);
+  background-image: url(../images/access.png);
   background-position: center;
   background-size: cover;
 }
@@ -101,7 +101,7 @@ header h1 a {
 .visual_contact {
   width: 100%;
   height: 300px;
-  background-image: url(/images/contact.jpg);
+  background-image: url(../images/contact.jpg);
   background-position: center;
   background-size: cover;
 }
