--- a/css/style.css
+++ b/css/style.css
@@ -605,12 +605,19 @@ textarea {
 /* ----------------media */
 
 @media screen and (max-width: 768px) {
-  .wrapper {width: 100%;}
-  .section {width: 100%;}
+  .wrapper {width: 100%;
+            padding: 20px;}
+  .section {width: 100%;
+            flex-direction: column-reverse;
+            padding: 0;}
 }
+
 @media screen and (max-width: 480px) {
   .wrapper {
     width: 100%;
-    font-size: 1.25rem;}
-  .section {width: 100%;}
+    font-size: 1.25rem;
+    padding: 20px;}
+  .section {width: 100%;
+            flex-direction: column-reverse;
+            padding: 0;}
 }
